--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">HydraSync</string>
     <string-array name="gender_options">
+        <item>Select Gender</item>
         <item>Male</item>
         <item>Female</item>
         <item>Other</item>
